# anthromass

./: README.md  pyproject.toml
anthromass/: README.html  (+6 more)
anthropmass/: README.md  _modidx.py  bambi_module.py  core.py  pyproject.toml  settings.ini
anthropmass/anthropmass/: _modidx.py  anthro_module.py  bambi_model_module.py  bambi_module.py  data_module.py  human_result_module.py  pca_module.py  prediction_module.py
anthropmass/anthropmass/human_result_module/: py.py
anthropmass/anthropmass/mass/: com_calculation_module.py  inertial_calc_module.py  massclauser_module.py  massmain_module.py  massmesh_module.py  massurdf_module.py  measurements_heights_module.py  plot_body_module.py  volume_calculation_module.py
anthropmass/data/processed/: ANSURIImalefemaleminusmeans.csv  ANSURIIminusmeanstest.csv  ANSURIIminusmeanstrain.csv  ANSURIItrain.csv  (+1 more)
anthropmass/mass/: measurements_heights_module.py  plot_body_module.py  volume_calculation_module.py
anthropmass/nbs/: 1000_final_result.ipynb  100_data.ipynb  110_data.ipynb  111_data.ipynb  112_data.ipynb  120_data_evaluation.ipynb  120_data_pca.ipynb  130_data_evaluation.ipynb  200_anthropometry.ipynb  201_anthropometry.ipynb  210_anthro_xgboost.ipynb  220_anthro_bambi.ipynb  221_anthro_bambi.ipynb  230_anthro_bambi.ipynb  250_anthro_bambi_viz.ipynb  300_anthro_pca.ipynb  310_anthro_pca_viz_head.ipynb  311_anthro_pca_viz_upper_trunk.ipynb  312_anthro_pca_viz_middle_trunk.ipynb  313_anthro_pca_viz_lower_trunk.ipynb  314_anthro_pca_viz_torso.ipynb  314_anthro_pca_viz_trunk.ipynb  315_anthro_pca_viz_thigh.ipynb  316_anthro_pca_viz_shank.ipynb  317_anthro_pca_viz_foot.ipynb  318_anthro_pca_viz_hand.ipynb  319_anthro_pca_viz_upper_arm.ipynb  320_anthro_pca_viz_forearm.ipynb  321_anthro_pca_viz_neck.ipynb  322_anthro_pca_viz_all.ipynb  600_mass.ipynb  610_mass.ipynb  610_mass_measurements_heights.ipynb  620_mass.ipynb  620_mass_volume_calc.ipynb  630_mass_com_calc.ipynb  640_mass.ipynb  640_mass_plot_body.ipynb  650.py  650_mass_generate_meshes.ipynb  (+4 more)
(+439 files in other folders)
