[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "anthromass"
dynamic = ["version"]
description = "anthromass nbdev 2"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Jobin John", email = "jobin.john@chalmers.se"}]
keywords = ['jupyter', 'python', 'anthropometry', 'biomechanics']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/jobindjohn/anthropmass"
Documentation = "https://jobindjohn.github.io/anthropmass"

[project.entry-points.nbdev]
anthromass = "anthromass._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "anthromass.__version__"}

[tool.setuptools.packages.find]
include = ["anthromass"]

[tool.nbdev]
